welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: not found: value dejafait
while(dejafait!=nbPas) {
      ^